Critique 5: Interdependency Risk Between ECIPs.
Critique 5: Interdependency Risk Between ECIPs.

--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -4,7 +4,7 @@ ecip: 1111
 title: Olympia EVM and Protocol Upgrades
 status: Draft
 type: Meta
-requires: 1112, 1113, 1114
+requires: 1112
 author: Cody Burns (@realcodywburns), Chris Mercer (@chris-mercer)
 created: 2025-07-04
 discussions-to: https://github.com/orgs/ethereumclassic/discussions/530
@@ -84,6 +84,12 @@ __Standards Compliance__: Supporting canonical EIPs is critical for application-
 While Ethereum Mainnet burns the `BASEFEE` under EIP-1559, a small number of EVM-compatible networks have chosen to redirect this fee to protocol treasuries instead. For example, the **Ronin** sidechain (Axie Infinity) routes base fee revenue to its [Ronin Treasury contract](https://explorer.roninchain.com/address/0x9f76b782bdfba7a5e9eaa9b7b0f2c78b6596b217), while **Celo** (a Proof-of-Stake L1) directs base fees to a [Gas Fee Handler contract](https://explorer.celo.org/address/0x471EcE3750Da237f93B8E339c536989b8978a438) governed by its DAO. These implementations demonstrate that treating `BASEFEE` as protocol income — rather than as a deflationary burn — is a viable and increasingly adopted alternative. By doing so, Ethereum Classic aligns with a growing trend toward using network activity to fund decentralized development in a sustainable, transparent, and incentive-aligned manner.
 
 Other networks such as **Mantle** and **Polygon CDK** also incorporate protocol revenue flows into DAO treasuries through modular treasury contracts. While not all use the `BASEFEE` directly, these implementations support the broader design of EVM-aligned, treasury-governed ecosystems.
+
+### Modular Activation
+
+While ECIP-1111 introduces BASEFEE redirection to an on-chain treasury, it does not require immediate deployment or activation of the Olympia DAO (ECIP-1113) or the legal interface (ECIP-1114). The BASEFEE is redirected to a passive, immutable treasury contract defined in ECIP-1112, which can safely accumulate funds until additional governance layers are deployed.
+
+This modular design ensures ECIP-1111 can be activated independently. Ethereum Classic nodes and users benefit from improved EVM compatibility and a fee market without being dependent on downstream DAO readiness. Funds will remain securely held and auditable in the treasury until governance proposals are enabled at a later stage.
 
 ### Implementation
 
