--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -4,7 +4,7 @@ ecip: 1112
 title: Olympia Treasury Contract
 status: Draft
 type: Meta
-requires: 1111, 1113, 1114
+requires: 1111
 author: Cody Burns (@realcodywburns), Chris Mercer (@chris-mercer)
 created: 2025-07-04
 discussions-to: https://github.com/orgs/ethereumclassic/discussions/530
@@ -109,6 +109,12 @@ Test cases will be included to validate:
 - Balance tracking and event emission from the contract
 - Compatibility with governance contract interfaces (`propose()`, `release()`, `execute()`)
 - Full testnet replay and consensus validation via Mordor deployments
+
+### Modular Treasury Deployment
+
+The Olympia Treasury is a standalone, immutable smart contract that may be deployed and activated before the DAO (ECIP-1113) or legal execution interface (ECIP-1114) are finalized. Once deployed, the treasury can receive BASEFEE funds redirected by ECIP-1111 without requiring immediate disbursement capability.
+
+This design allows funds to accumulate securely on-chain while governance contracts are tested and deployed. Until the DAO is active, the treasury contract will reject any withdrawal attempts, ensuring security and forward compatibility. This decouples treasury infrastructure from governance infrastructure, supporting a phased rollout of the Olympia Upgrade.
 
 ### Backwards Compatibility
 
