--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -4,7 +4,7 @@ ecip: 1113
 title: Olympia DAO Governance Framework
 status: Draft
 type: Meta
-requires: 1111, 1112, 1114
+requires: 1112
 author: Cody Burns (@realcodywburns), Chris Mercer (@chris-mercer)
 created: 2025-07-04
 discussions-to: https://github.com/orgs/ethereumclassic/discussions/530
@@ -14,6 +14,9 @@ license: CC0-1.0
 ### Simple Summary
 
 This ECIP defines the on-chain governance framework for the Olympia DAO, the decentralized organization responsible for managing Ethereum Classic’s protocol-level treasury (as established in ECIP-1112). Olympia DAO enables permissionless proposal submission, token-weighted voting, and accountable execution of development funding through the Olympia Treasury, aligning governance with the network’s long-term sustainability and decentralization principles.
+
+**No governance token exists at launch. Any token design, supply, or distribution must be proposed and approved transparently through DAO governance.**
+
 
 ### Abstract
 
@@ -52,7 +55,8 @@ The DAO MUST include the following core components:
   - Purpose and scope of work
   - Proposed disbursement schedule (e.g., milestones, vesting, single payout)
 
-- **Voting Mechanism**: Proposals SHALL be subject to an on-chain voting process governed by a transparent stake-based or reputation-based system. Initial implementation MAY use token-weighted voting (e.g., staked ETC, a soulbound participation token such as veOLY, or quadratic models), subject to future upgrade. The initial veOLY or governance token supply mechanism SHALL be established via a DAO-approved proposal, with no pre-allocation.
+- **Voting Mechanism**: Proposals SHALL be subject to an on-chain voting process governed by a transparent stake-based or reputation-based system. Initial implementation MAY use token-weighted voting (e.g., staked ETC, a soulbound participation token such as veOLY, or quadratic models), subject to future upgrade. No governance token exists at deployment. The creation, distribution, and rules for any governance token (e.g., veOLY) MUST be proposed and approved transparently through DAO vote, with no premine or insider allocation permitted.
+
 
 - **Quorum and Thresholds**:
   - A minimum quorum MUST be required for any vote to pass.
@@ -199,6 +203,12 @@ Governance parameters may be initialized with conservative defaults and adjusted
 
 While the Olympia DAO operates entirely on-chain for governance, voting, and proposal execution, an external legal interface is provided through the Ethereum Classic DAO LLC (see ECIP-1114). This Wyoming-registered entity facilitates real-world compliance tasks such as fiat conversion, tax reporting, and contractor onboarding. It does not hold treasury funds or possess decision-making authority. Instead, it acts solely as a compliance and execution layer for off-chain disbursements authorized by DAO governance.
 
+### Decoupled Governance Deployment
+
+The Olympia DAO is intentionally designed to be deployed independently of the initial treasury activation. ECIP-1113 may be implemented after ECIP-1111 and ECIP-1112 have gone live, enabling the treasury to passively accumulate protocol revenue while governance infrastructure undergoes audit, testnet deployment, and stakeholder onboarding.
+
+This decoupling allows for a safer and more iterative rollout. No funds can be disbursed until the DAO is live and the relevant proposal mechanisms are functional. Community members can track treasury accumulation and verify contract behavior prior to governance activation.
+
 ### Backwards Compatibility
 
 The Olympia DAO governance system is a new protocol layer and does not alter the Ethereum Classic virtual machine, consensus rules, or transaction formats. As such, it is fully backward-compatible with all existing smart contracts, wallets, and tooling.
@@ -239,6 +249,9 @@ The Olympia DAO introduces a governance layer that must be designed with strong 
 
 - **Governance Inactivity or Capture**:  
   To mitigate long-term governance stagnation or tokenholder collusion, the DAO MAY authorize a time-limited fallback multisig capable of pausing execution and initiating recovery proposals. This multisig MUST be elected, transparent, and auditable, with no treasury withdrawal privileges. Such a mechanism ensures governance continuity without compromising decentralization.
+
+- **Token Premine Prevention**:  
+  To prevent insider control or governance capture, no governance token is defined or distributed at launch. All token creation, including voting rights or delegation models, MUST be initiated via DAO proposal and subject to on-chain vote. This ensures neutrality and preserves ETC’s anti-premine ethos.
 
 Thorough testing on Mordor Testnet, peer review from ecosystem participants, and third-party audits of the DAO and treasury contracts are critical before mainnet deployment.
 
