--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -4,7 +4,7 @@ ecip: 1114
 title: Ethereum Classic Funding Proposal Process
 status: Draft
 type: Meta
-requires: 1111, 1112, 1113
+requires: 1113
 author: Cody Burns (@realcodywburns), Chris Mercer (@chris-mercer)
 created: 2025-07-04
 discussions-to: https://github.com/orgs/ethereumclassic/discussions/530
