Critique 6: Smart Contract Complexity and Attack Surface
Critique 6: Smart Contract Complexity and Attack Surface

--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -140,11 +140,80 @@ The Olympia upgrade introduces a new transaction type (Type-2) and an additional
 
 ### Security Considerations
 
-No new consensus-critical vulnerabilities are introduced by this upgrade. The `BASEFEE` opcode and EIP-1559 transaction format have been widely adopted and audited across the EVM ecosystem. Core-Geth implementers are advised to validate integration against existing test vectors and consensus tests.
+The Olympia Upgrade introduces no new consensus-critical vulnerabilities beyond the adoption of EIP-1559 and EIP-3198, both of which are well-established across the EVM ecosystem. Key considerations are outlined below:
 
-Client implementers must ensure that redirecting the `BASEFEE` to the Olympia Treasury does not introduce rounding errors or state inconsistencies. Reference vectors from Ethereum Mainnet should be adjusted to reflect treasury accumulation rather than burn behavior.
+---
 
-As EIP-1559 and EIP-3198 are already deployed across major EVM networks (ETH, BSC, OP Stack), they have received extensive production testing and formal auditing. Only the redirect logic to the Olympia Treasury diverges from Ethereum’s reference model, and must be carefully validated.
+#### 1. EIP-1559 Safety and Maturity
+
+- **Production Provenance**:  
+  The `BASEFEE` opcode and EIP-1559 transaction format have been widely deployed and audited across Ethereum, Binance Smart Chain, and OP Stack networks.
+
+- **Consensus Confidence**:  
+  These features have undergone extensive production testing, formal verification, and consensus testing since their activation on Ethereum Mainnet.
+
+---
+
+#### 2. BASEFEE Redirection Logic
+
+- **Redirect Scope**:  
+  The only deviation from Ethereum’s implementation is the redirection of `BASEFEE` to the Olympia Treasury instead of burning it.
+
+- **Protocol Enforcement**:  
+  This redirection is **hardcoded at the consensus level**. EOAs and contracts cannot modify or reroute this behavior.
+
+- **No Impact to Opcode Set or Gas Accounting**:  
+  The Olympia Upgrade does **not modify** the EVM opcode set, gas mechanics, or transaction processing outside of what is already defined in EIP-1559 and EIP-3198.
+
+---
+
+#### 3. Client Implementation Requirements
+
+- **State Integrity**:  
+  Core-Geth and other clients must ensure that the `BASEFEE` redirect does not introduce:
+  - Rounding errors  
+  - State inconsistencies  
+  - Incorrect accounting of cumulative gas usage
+
+- **Reference Test Vector Updates**:  
+  Ethereum Mainnet test vectors (which expect `BASEFEE` to be burned) MUST be adjusted to validate accumulation in the treasury address.
+
+- **Cross-Client Compatibility**:  
+  All clients participating in the Olympia Upgrade must implement the redirect logic identically to avoid consensus divergence.
+
+---
+
+#### 4. Treasury and DAO Isolation
+
+- **Smart Contract Safety**:  
+  While ECIP-1111 does not introduce smart contracts itself, it **enables treasury accumulation** via BASEFEE.  
+  The treasury contract and governance systems (defined in ECIPs 1112–1114) include **separate security constraints** and **cannot influence base protocol behavior**.
+
+- **Withdrawal Safety**:  
+  Treasury funds cannot be moved without successful, on-chain governance execution through the Olympia DAO.  
+  This separation ensures that protocol-level fee logic is isolated from governance risk.
+
+---
+
+#### 5. Testing and Audit Strategy
+
+- **Hardcoded Redirect Validation**:  
+  Implementers must verify BASEFEE redirection through testnet simulation and consensus checks.
+
+- **Mordor Testnet Deployment**:  
+  Prior to mainnet activation, full testing will be conducted on the Mordor Testnet, including:
+  - EIP-1559 transaction validation  
+  - BASEFEE accumulation in the treasury  
+  - Invariant checks on state transition correctness
+
+- **Audit Alignment**:  
+  Although ECIP-1111 activates only protocol-level features, client teams are encouraged to coordinate audits in parallel with ECIP-1112–1114 to ensure full-stack integrity.
+
+---
+
+#### Summary
+
+The Olympia Upgrade builds upon proven EVM features (EIP-1559, EIP-3198) and introduces a hardcoded, consensus-level redirect of the `BASEFEE` to a transparent treasury. No additional opcodes or gas mechanics are introduced. All treasury management logic is deferred to audited smart contracts governed by the Olympia DAO, preserving protocol security while enabling sustainable ecosystem funding.
 
 ## Copyright
 
