--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -126,19 +126,74 @@ This change does not impact legacy transaction formats (Type-0) or smart contrac
 
 ### Security Considerations
 
-The Olympia Treasury contract must be implemented with strict security guarantees:
+The Olympia Treasury contract must adhere to strict security guarantees to ensure integrity, immutability, and protocol safety. Security measures are grouped by concern below:
 
-- **No Upgradability or Admin Keys**: The contract MUST be immutable, with no proxy, delegatecall, or admin modifiers that allow for privileged access or modification after deployment.
+---
 
-- **On-Chain Verification**: All inbound and outbound transactions are recorded transparently on-chain. This ensures that treasury balances and disbursements are fully auditable by the community.
+#### 1. Contract Immutability and Access Control
 
-- **DAO Integration Risk**: Governance failures (e.g., malicious proposals or collusion) are possible at the DAO layer. While outside the scope of this ECIP, best practices in DAO design—such as proposal review periods, multi-sig controls, and on-chain voting—should be implemented to minimize abuse.
+- **No Upgradability or Admin Keys**:  
+  The Treasury contract is deployed as **immutable code** with **no proxy**, **no delegatecall**, and **no admin modifiers**. No entity — including the DAO — can modify the contract after deployment.
 
-- **Client Enforcement**: Clients must enforce protocol-level redirection of the `BASEFEE` to the treasury. Failing to do so risks consensus divergence and breaks compatibility with the canonical Ethereum Classic chain.
+- **Access Control**:  
+  Only the authorized **DAO executor contract** can call `release()` or `execute()`.  
+  Any calls from EOAs or unauthorized contracts will **revert automatically**.
 
-- **Replay Protection**: As with all hard forks, clients must ensure proper transaction replay protection for cross-fork safety.
+- **Minimal Attack Surface**:  
+  Treasury logic is **intentionally minimal**. It performs only basic permission checks and transfers approved funds — reducing complexity and risk.
 
-Extensive testing on Mordor Testnet will precede mainnet deployment to validate correct redirection logic, contract immutability, and integration with the Olympia DAO governance system.
+---
+
+#### 2. DAO Integration and Governance Risks
+
+- **Governance Failures**:  
+  Risks such as malicious proposals or collusion lie at the DAO layer. While outside the direct scope of this ECIP, mitigations include:
+  - Proposal review periods  
+  - Multi-sig proposal guards  
+  - Transparent on-chain voting with quorum enforcement
+
+- **DAO Capture Resilience**:  
+  Even if the DAO governance layer is compromised, **treasury funds remain locked** unless a valid, quorum-approved proposal is executed through the correct DAO interface.
+
+---
+
+#### 3. Client Enforcement and Network Safety
+
+- **Protocol Enforcement by Clients**:  
+  Clients MUST enforce protocol-level redirection of the `BASEFEE` to the treasury.  
+  Any client failing to implement this will diverge from consensus with the canonical Ethereum Classic chain.
+
+- **Replay Protection**:  
+  As with all hard forks, clients must implement **transaction replay protection** to safeguard against cross-fork execution.
+
+---
+
+#### 4. Replay Safety and Execution Integrity
+
+- **Chain-Specific Execution**:  
+  Treasury disbursement calls MUST include a **chain ID** and **proposal hash** in the payload. This prevents replay attacks across testnets, forks, or non-canonical chains.
+
+- **Proposal-Linked Execution**:  
+  All disbursements are tied to successful on-chain proposals. Without valid DAO approval, the Treasury contract will reject any attempted execution.
+
+---
+
+#### 5. Audit and Testing Strategy
+
+- **Independent Audits**:  
+  The Olympia Treasury contract will undergo **dedicated, third-party audits** independent of the DAO governance logic.
+
+- **Formal Verification**:  
+  The contract will be analyzed using formal tools (e.g., Slither, MythX) to verify logic soundness.
+
+- **Testnet Simulation**:  
+  Full contract functionality — including `BASEFEE` redirection and DAO-triggered disbursements — will be tested on the **Mordor Testnet** ahead of mainnet deployment.
+
+---
+
+#### Summary
+
+The Olympia Treasury is designed to preserve ETC's immutability, enforce strict governance-only disbursement, and minimize smart contract complexity. Its isolation from governance logic, hardened permission model, and full on-chain auditability make it robust against both technical and governance-based attacks. Thorough testnet deployment, auditing, and replay protections will ensure its readiness and resilience for mainnet activation.
 
 ### Copyright
 
