--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -70,6 +70,9 @@ The DAO MUST include the following core components:
 
 #### Contract Properties
 
+- **Contract Simplicity**: DAO logic is based on well-audited, modular frameworks such as OpenZeppelin Governor and Compound Governor Bravo.
+- **Execution Safety**: The DAO can only trigger actions on the Treasury via predefined interfaces. No arbitrary logic or delegatecalls are permitted.
+
 - DAO logic MUST be implemented as modular, upgradeable smart contracts with clear interfaces. Any upgrade paths MUST be governed via on-chain proposal, meet quorum and threshold requirements, and include a timelocked delay before execution.
 
 - The DAO SHALL have no centralized admin control over treasury funds.
@@ -226,34 +229,85 @@ Because the DAO system exists entirely at the smart contract level, its deployme
 
 ### Security Considerations
 
-The Olympia DAO introduces a governance layer that must be designed with strong safeguards to prevent abuse, mismanagement, or centralization. Key security considerations include:
+The Olympia DAO and Treasury contracts are designed with a strong focus on modularity, immutability, and auditability. Key security considerations are grouped below:
 
-- **Governance Capture**: If a single actor or small group acquires majority voting power (e.g. via token delegation), they could push through malicious proposals. Mitigations include quorum thresholds, delayed execution, and dynamic participation incentives.
+---
 
-- **Smart Contract Vulnerabilities**: All DAO contracts must undergo rigorous audits and formal verification. Governance logic should avoid complex branching logic or unsafe delegatecall patterns.
+#### 1. Contract Architecture & Attack Surface Minimization
 
-- **Proposal Spam & Denial of Service**: To prevent spam, proposal submission may include minimal thresholds such as time-locks, token staking, or vetting periods. DAO design should protect against front-running or griefing of active proposals.
+- **Modular Separation**:  
+  The DAO and Treasury are deployed as separate contracts with tightly scoped permissions. The DAO **cannot upgrade or override** the Treasury contract logic.
 
-- **Funds Misallocation**: The DAO must enforce strict execution paths that only allow funds to be released to externally validated proposals, minimizing the chance of accidental or fraudulent disbursements.
+- **Immutable Treasury**:  
+  The Olympia Treasury contract is **fully immutable** — it cannot be upgraded, paused, or altered, even by governance. Only time-locked, DAO-approved proposals can trigger disbursements via its limited `release()` or `execute()` functions.
 
-- **Treasury Safeguards**: The Olympia Treasury contract MUST NOT allow direct EOA withdrawals. All transfers must be triggered through verified governance execution paths to ensure full auditability.
+- **Controlled Upgradeability (DAO only)**:  
+  Governance logic may be upgraded in the future, but **only via a timelocked, quorum-approved on-chain proposal**. The Treasury remains fixed by design.
 
-- **Upgradability Risks**: If the governance system is designed to be upgradeable, those upgrade paths must themselves be subject to governance approval and time-locked delay to prevent hostile takeovers.
+- **No Emergency Withdrawal Logic**:  
+  Treasury funds **cannot be accessed outside of the defined governance process**, even during emergencies. This ensures full accountability.
 
-- **Client Divergence**: Clients must verify that governance-triggered treasury withdrawals match the approved proposals. Inconsistencies between governance execution and treasury state could lead to consensus-breaking behavior.
+---
 
-- **Upgradeability and Treasury Integrity**:  
-  While the Olympia DAO is designed for modular upgradeability to support evolving governance mechanisms, this flexibility does not extend to the treasury itself. The Olympia Treasury contract is immutable, and cannot be upgraded, withdrawn from, or modified — even by future DAO proposals. DAO upgrades are limited to governance logic only and must pass full proposal review, quorum, and timelock procedures.
+#### 2. Audit and Testing Strategy
 
-  This architectural separation ensures that no future DAO, governance token holder, or developer can unilaterally seize or misallocate protocol funds. Treasury disbursement always requires an on-chain governance proposal, public scrutiny, and time-locked execution via secure interfaces.
+- **Audit Plan**:  
+  - All contracts will undergo at least one third-party security audit.  
+  - Formal verification tools (e.g., Slither, MythX) will be used for static analysis and vulnerability detection.
 
-- **Governance Inactivity or Capture**:  
-  To mitigate long-term governance stagnation or tokenholder collusion, the DAO MAY authorize a time-limited fallback multisig capable of pausing execution and initiating recovery proposals. This multisig MUST be elected, transparent, and auditable, with no treasury withdrawal privileges. Such a mechanism ensures governance continuity without compromising decentralization.
+- **Public Testnet Deployment**:  
+  - The full DAO and Treasury system will be deployed on Mordor Testnet.  
+  - Governance cycles and treasury disbursements will be simulated in a production-like environment for public testing.
+
+---
+
+#### 3. Governance Safety and Abuse Prevention
+
+- **Governance Capture Risks**:  
+  A single actor or small coalition gaining majority voting power could push malicious proposals. Mitigations include:
+  - Quorum thresholds  
+  - Delayed execution (timelocks)  
+  - Delegation models with transparency  
+  - Incentives for diverse participation
+
+- **Governance Inactivity or Collusion**:  
+  To prevent stagnation or cartel behavior:
+  - The DAO MAY authorize a **fallback multisig** with strictly limited powers (e.g., pausing execution, initiating emergency proposals).  
+  - This multisig MUST be elected, transparent, and **must NOT have treasury withdrawal rights**.
 
 - **Token Premine Prevention**:  
-  To prevent insider control or governance capture, no governance token is defined or distributed at launch. All token creation, including voting rights or delegation models, MUST be initiated via DAO proposal and subject to on-chain vote. This ensures neutrality and preserves ETC’s anti-premine ethos.
+  No governance token exists at launch. Any future token issuance (e.g., for voting or delegation) MUST originate from an on-chain DAO proposal and pass a full governance vote. This maintains ETC’s anti-premine ethos.
 
-Thorough testing on Mordor Testnet, peer review from ecosystem participants, and third-party audits of the DAO and treasury contracts are critical before mainnet deployment.
+---
+
+#### 4. Smart Contract Security
+
+- **Delegatecall and Logic Simplicity**:  
+  DAO contracts will avoid unsafe `delegatecall` patterns and complex branching logic, reducing risk exposure.
+
+- **Proposal Spam / DoS Protection**:  
+  To mitigate spam or griefing:
+  - Submissions MAY require minimal thresholds (e.g., stake, cooldowns, or pre-vetting periods).  
+  - Front-running or overlapping proposals should be rate-limited in the contract logic.
+
+- **Funds Misallocation Protection**:  
+  DAO disbursements can only go to externally validated proposals. Strict validation paths ensure disbursement only happens upon approval, with metadata integrity checks.
+
+---
+
+#### 5. Client Consistency and Replay Protection
+
+- **Client Validation Requirements**:  
+  Clients MUST validate that governance-triggered treasury disbursements match the original approved proposals. Inconsistencies may lead to consensus divergence or unintended fund release.
+
+- **Replay Protection Across Chains**:  
+  Proposals MUST include a governance domain separator and chain ID to prevent replay attacks on forks or testnets.
+
+---
+
+#### Summary
+
+The Olympia DAO and Treasury are designed to minimize attack surfaces while enabling decentralized funding. Strong architectural separation, strict execution paths, and extensive audit requirements reduce the likelihood of governance abuse or treasury compromise. Thorough testing on Mordor Testnet, third-party reviews, and community feedback will ensure readiness for mainnet deployment.
 
 ### Copyright
 
