--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -199,33 +199,107 @@ Because the ECFP system operates entirely through standard smart contract intera
 
 ### Security Considerations
 
-The ECFP process introduces formal structures for requesting and disbursing protocol-level funds. Several security-related concerns must be addressed to ensure long-term safety and integrity:
+Although ECIP-1114 defines a **funding process** rather than consensus-level protocol logic, it introduces important security and integrity requirements. These are organized into five categories:
 
-- **Sybil Attacks**: To prevent spam or malicious submissions, proposal intake should include minimum thresholds such as reputation-based gating, stake requirements, or time-based cooldowns. Care must be taken not to make these barriers so high that they discourage legitimate participation.
+---
 
-- **Proposal Manipulation**: Malicious actors may attempt to submit deceptive or harmful proposals. Transparent deliberation periods, metadata requirements, and on-chain voting help mitigate these risks.
+#### 1. Metadata and Proposal Integrity
 
-- **Funding Abuse**: To avoid misappropriation, disbursements should be milestone-based or require accountability checks. Proposals can include vesting schedules, refund mechanisms, or revocation triggers.
+- **Content-Addressed Metadata**:  
+  Every ECFP MUST include a content hash (e.g., IPFS CID or Arweave digest) in its on-chain metadata to prevent tampering.
 
-- **Governance Capture**: If a small group gains disproportionate voting power, they could dominate funding flows. Mitigations include quorum requirements, vote delegation, and periodic governance parameter reviews.
+- **Immutable References**:  
+  The off-chain proposal metadata MUST be content-addressed and stored immutably. Voters must be guaranteed that the referenced content cannot be modified after submission.
 
-- **Client Implementation**: All clients must enforce consistency between approved proposals and treasury execution. Mismatches could cause divergence or fund loss.
+- **Proposal Uniqueness**:  
+  Each ECFP ID MUST be globally unique and immutable to prevent collisions, replay attacks, or duplicate execution.
 
-- **DAO Upgrade Risks**: If the Olympia DAO governance system is upgradable, upgrade paths must be secure, time-locked, and publicly auditable to prevent hostile takeovers.
+- **Replay Protection**:  
+  All ECFPs MUST include a chain ID and governance domain separator in the payload to prevent replay on forks or testnets.
 
-- **Treasury Integrity**: Only the DAO should be able to trigger treasury disbursements. The Olympia Treasury contract must reject direct access from EOAs or unauthorized contracts.
+---
 
-- **Reentrancy or Logic Bugs**: DAO and Treasury contracts must be formally verified and audited to prevent reentrancy attacks, logic errors, or unintended side effects during proposal execution.
+#### 2. Treasury and DAO Safeguards
 
-- **Metadata Integrity**: Off-chain proposal documents referenced in ECFPs must include their content hash in the on-chain metadata to prevent tampering or metadata spoofing. This ensures that the voted-upon proposal content cannot be altered post-submission.
+- **DAO–Treasury Isolation**:  
+  The Treasury contract does NOT parse or interpret proposals. It acts only on `release()` or `execute()` calls from the authorized DAO executor.
 
-- **Replay Safety**: ECFP executions MUST be protected against replay attacks across testnet/mainnet by including a chain ID and governance domain separator in the execution hash.
+- **Restricted Permissions**:  
+  Treasury execution functions MUST reject any unauthorized callers, including EOAs or unknown contracts.
 
-- **Redundant Event Logging**: To support full audit trails, the DAO and Treasury contracts SHOULD both emit disbursement-related events when a proposal is executed. Indexers can cross-check event logs for consistency.
+- **No Arbitrary Execution**:  
+  ECFPs CANNOT deploy custom logic or grant emergency authority. Execution is restricted to fixed, auditable disbursement logic as defined in ECIP-1112.
 
-- **Proposal Uniqueness**: Each ECFP ID MUST be unique and immutable once assigned to prevent double-spend proposals or conflicting execution attempts.
+- **Immutable Lifecycle States**:  
+  Once an ECFP enters the `Active` state (on-chain voting), it becomes immutable. No changes can be made after that point.
 
-Thorough testing on testnet, rigorous code review, and community participation are essential to minimize these risks prior to mainnet deployment.
+- **Redundant Event Logging**:  
+  Both the DAO and Treasury SHOULD emit execution events (e.g., `ProposalExecuted`) to support auditability and transparency across explorers and indexers.
+
+---
+
+#### 3. Governance Process Risks
+
+- **Governance Capture**:  
+  A minority with concentrated voting power could dominate treasury flows. Mitigations include:
+  - Quorum thresholds  
+  - Delegated voting models  
+  - Governance parameter audits and upgrade reviews
+
+- **Replay Mitigation**:  
+  Governance proposals MUST include a unique domain and ID to prevent cross-network replay.
+
+- **DAO Upgrade Risks**:  
+  If the DAO governance system is upgradable, upgrade paths MUST be:
+  - Time-locked  
+  - Audited  
+  - Approved via public on-chain governance  
+
+  This ensures that no upgrade can be rushed or executed unilaterally.
+
+---
+
+#### 4. Execution and Implementation Risks
+
+- **Client Consistency**:  
+  Clients MUST verify that only valid DAO-approved proposals can trigger treasury actions. Inconsistencies can cause consensus failures or fund loss.
+
+- **Reentrancy and Logic Bugs**:  
+  DAO and Treasury contracts MUST be formally verified and audited to avoid logic errors or reentrancy attacks.
+
+- **Proposal Manipulation**:  
+  Malicious ECFPs with deceptive deliverables or vague KPIs are possible. This is mitigated by:
+  - Structured templates  
+  - Review periods  
+  - Mandatory metadata and outcome tracking
+
+- **Funding Abuse**:  
+  Approved proposals SHOULD use milestone-based disbursement, vesting schedules, and clawback clauses to ensure accountability.
+
+---
+
+#### 5. Spam Resistance and Participation Gating
+
+- **Sybil Resistance**:  
+  The DAO MAY enforce minimum participation gates to prevent spam and denial-of-service attacks, such as:
+  - Token staking requirements  
+  - Submission cooldown periods  
+  - Reputation systems or contributor whitelists  
+
+  These mechanisms MUST preserve the permissionless nature of the process and avoid overly burdensome barriers to entry.
+
+---
+
+#### Summary
+
+ECIP-1114 introduces a structured and transparent funding pipeline via the ECFP format. To ensure long-term security and resilience:
+
+- All metadata must be immutable and auditable.  
+- Treasury disbursement is strictly controlled through DAO logic.  
+- Governance and execution paths must be secured, rate-limited, and transparent.  
+- Participation must remain open while defending against spam and manipulation.
+
+Prior to mainnet deployment, the full ECFP system MUST undergo testnet trials, contract audits, and public peer review to validate these safeguards.
 
 ### Copyright
 
