Critique 7 — Legal Centralization & DAO LLC Scope
Critique 7 — Legal Centralization & DAO LLC Scope

--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -91,24 +91,65 @@ The Ethereum Classic Funding Proposal (ECFP) process is defined as a structured,
    - All proposals and their statuses SHALL be recorded on-chain.
    - A public dashboard or explorer MAY be maintained to track proposal history, disbursements, and results.
 
-#### Governance Scope
+#### Governance Scope and Legal Interface
 
-- The ECFP process SHALL be binding for all disbursements from the Olympia Treasury.
-- Emergency withdrawals, recurring budgets, or multi-phase proposals MUST still be submitted via the ECFP process.
-- Olympia DAO MAY introduce additional proposal categories (e.g., Operational ECFPs, Treasury Management ECFPs) with specific criteria and review workflows.
+The Ethereum Classic Funding Proposal (ECFP) process defines the **exclusive pathway** for all disbursements from the Olympia Treasury. This ensures funding decisions are consistent, transparent, and governed entirely through on-chain mechanisms.
+
+**Scope of Governance:**
+
+- The ECFP process SHALL be binding for **all treasury disbursements**, including:
+  - Core development funding  
+  - Emergency withdrawals  
+  - Recurring budgets  
+  - Multi-phase or milestone-based grants
+- Olympia DAO MAY introduce specialized ECFP categories (e.g., Operational ECFPs, Treasury Management ECFPs) with tailored review workflows and eligibility criteria.
+- No funds MAY be disbursed outside the ECFP lifecycle.
+
+---
 
 #### Legal Interface: Ethereum Classic DAO LLC
 
-While the Olympia DAO governs proposal approval and treasury disbursement on-chain, all off-chain administrative and compliance functions — including fiat conversion, tax reporting, Bank Secrecy Act (BSA) and Know Your Customer (KYC) compliance, and contractor engagement — SHALL be facilitated by **Ethereum Classic DAO LLC**, a Wyoming-registered DAO entity.
+While governance decisions and treasury execution occur entirely **on-chain**, Ethereum Classic requires a compliant interface for recipients needing fiat settlement, tax reporting, or legal contracting. These off-chain functions SHALL be handled by the **Ethereum Classic DAO LLC**, a Wyoming-registered entity established under the **Wyoming DAO LLC Act (2021 Wyo. Sess. Laws Ch. 151)**.
 
-This legal wrapper:
+This structure enables legal compatibility without compromising the decentralization or sovereignty of the DAO.
 
-- Acts as a real-world interface for recipients who require legal clarity or fiat settlement  
-- Ensures that treasury disbursements meet applicable regulatory requirements  
-- Maintains standardized reporting and transparency to uphold the DAO’s integrity  
-- Holds no governance authority; all disbursement decisions MUST originate from on-chain proposals and votes
+**Legal Role and Boundaries:**
 
-The DAO LLC functions solely as a **compliance conduit**, enabling lawful execution of approved disbursements **without custody or discretion** over treasury funds or DAO governance.
+- The DAO LLC functions solely as an **administrative executor**, not a decision-maker.
+- All disbursement instructions MUST originate from successful on-chain proposals.
+- The DAO LLC MUST:
+  - Perform fiat conversions, KYC/AML onboarding, and tax filings as needed  
+  - Engage contractors in accordance with DAO votes  
+  - Adhere to compliance laws without altering DAO decisions
+
+---
+
+#### Wyoming Legal Protections and Operating Constraints
+
+The DAO LLC is **legally bound** by its Operating Agreement to uphold the decisions of the Olympia DAO. The Wyoming DAO LLC Act provides enforceable recognition that **on-chain governance holds primacy** over the legal entity.
+
+**Enforceable Constraints:**
+
+- The DAO LLC SHALL NOT:
+  - Hold treasury keys or act as a signer on treasury funds  
+  - Approve, reject, or modify any ECFP  
+  - Veto or delay execution of valid DAO decisions  
+- The Operating Agreement SHALL:
+  - Require strict execution of DAO-approved disbursements  
+  - Forbid discretion in reviewing or amending funding decisions  
+  - Establish DAO tokenholder governance as the LLC’s controlling body
+
+**Accountability and Redress Mechanisms:**
+
+- If the DAO LLC fails to execute approved instructions or breaches its mandate:
+  - DAO governance MAY reassign administrative duties to a new contractor or legal wrapper  
+  - The DAO MAY vote to amend the Operating Agreement to reinforce alignment  
+  - Legal action MAY be pursued under Wyoming law for breach of fiduciary duty
+
+---
+
+**Summary:**  
+By anchoring off-chain execution to both **code and corporate law**, Ethereum Classic ensures that treasury operations remain decentralized, lawful, and resistant to interference. The DAO LLC is accountable to the DAO — not the reverse — enabling the Olympia funding process to scale without sacrificing sovereignty.
 
 ### Rationale
 
