Critique 8 – Plutocracy & Spam Protection
Critique 8 – Plutocracy & Spam Protection

--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -63,6 +63,21 @@ The Olympia Treasury SHALL expose a governance interface callable by a designate
 
 The Treasury contract MUST NOT include embedded governance logic. Instead, it SHALL serve as a funding vault governed externally by Olympia DAO through composable smart contract interactions.
 
+#### Protection Against Unauthorized Access and Spam
+
+The Olympia Treasury contract is hardened against unauthorized disbursement attempts:
+
+- **DAO-Only Execution**:  
+  Only the authorized DAO executor contract MAY trigger `release()` or `execute()` functions. Calls from EOAs or unauthorized contracts are rejected.
+
+- **No Proposal Logic in Treasury**:  
+  The treasury contract performs no evaluation of proposals and contains no governance logic, reducing its surface area for spam or attack vectors.
+
+- **Rate-Limited by DAO Governance**:  
+  Proposal throughput is rate-limited at the governance contract layer, protecting the treasury from excessive or malicious execution attempts.
+
+These constraints ensure the treasury acts as a secure, passive vault controlled solely through verified governance channels.
+
 ### Rationale
 
 The Olympia Treasury contract serves as the cornerstone of Ethereum Classic’s transition to a sustainable, self-funded ecosystem. Its design reflects several key priorities:
