--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -227,6 +227,24 @@ Key backward compatibility notes:
 
 Because the DAO system exists entirely at the smart contract level, its deployment poses no risk to prior state or core protocol functionality.
 
+#### Anti-Plutocracy & Participation Protections
+
+To preserve open participation and limit governance capture, the Olympia DAO governance framework includes:
+
+- **Quorum & Supermajority Requirements**:  
+  Proposals must meet minimum quorum and approval thresholds to prevent domination by a small minority.
+
+- **Vote Delegation Support**:  
+  Token holders may delegate their votes to trusted representatives, encouraging informed participation and enabling delegation-based governance models.
+
+- **Governance Model Modularity**:  
+  The DAO framework is modular and upgradeable. Future voting mechanisms — such as quadratic voting, soulbound token gating, or reputation-weighted systems — MAY be proposed and activated via on-chain governance to increase participation fairness.
+
+- **On-Chain Transparency**:  
+  All proposals, votes, and outcomes are immutably recorded on-chain for public audit, improving accountability and reducing backroom influence.
+
+These mechanisms aim to ensure decentralized participation while mitigating the risk of plutocratic control.
+
 ### Security Considerations
 
 The Olympia DAO and Treasury contracts are designed with a strong focus on modularity, immutability, and auditability. Key security considerations are grouped below:
