--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -91,6 +91,29 @@ The Ethereum Classic Funding Proposal (ECFP) process is defined as a structured,
    - All proposals and their statuses SHALL be recorded on-chain.
    - A public dashboard or explorer MAY be maintained to track proposal history, disbursements, and results.
 
+#### Spam and Governance Capture Mitigations
+
+To defend the ECFP system against spam, griefing, and plutocratic dominance, the following mitigations MAY be implemented by Olympia DAO:
+
+- **Minimal Participation Thresholds**:  
+  Proposal submission MAY require:
+  - Holding a small amount of ETC or governance token  
+  - Staking or gas deposits (refundable if quorum is met)
+
+- **Cooldown Periods & Rate Limits**:  
+  Limits on simultaneous active proposals or enforced cooldowns between submissions help prevent denial-of-service vectors.
+
+- **Mandatory Review Periods**:  
+  Every ECFP enters a `Draft` period before voting, allowing the community to validate proposal format, scope, and deliverables.
+
+- **Structured Proposal Requirements**:  
+  Standardized templates, metadata hashes (e.g., IPFS CIDs), and clear KPIs raise the minimum effort for spam submissions.
+
+- **DAO Upgrade Paths for Voting Models**:  
+  While token-weighted voting is the initial model, the DAO MAY upgrade to more inclusive models (e.g., quadratic voting, reputation scoring) via governance proposals.
+
+These measures ensure the ECFP process remains permissionless while resilient to abuse.
+
 #### Governance Scope and Legal Interface
 
 The Ethereum Classic Funding Proposal (ECFP) process defines the **exclusive pathway** for all disbursements from the Olympia Treasury. This ensures funding decisions are consistent, transparent, and governed entirely through on-chain mechanisms.
